[gd_scene load_steps=4 format=3 uid="uid://sp8rslqli55w"]

[ext_resource type="Script" uid="uid://bltlv3c2ahq47" path="res://scenes/win_screen_1.gd" id="1_ay2yh"]
[ext_resource type="Texture2D" uid="uid://dhyytlwh36mfe" path="res://World Design/Ocean/Ocean_7/6.png" id="2_je8ce"]
[ext_resource type="FontFile" uid="uid://dyg48fx1lqu1j" path="res://UI/GrapeSoda.ttf" id="2_p6yhs"]

[node name="WinScreen1" type="Control"]
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 675.0
offset_top = 370.0
offset_right = -596.0
offset_bottom = -427.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ay2yh")
metadata/_edit_group_ = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 324.0
offset_bottom = 101.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="next level" type="Button" parent="MarginContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("2_p6yhs")
theme_override_font_sizes/font_size = 25
text = "Next Level"

[node name="replay level" type="Button" parent="MarginContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("2_p6yhs")
theme_override_font_sizes/font_size = 25
text = "Replay Level"

[node name="main menu" type="Button" parent="MarginContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("2_p6yhs")
theme_override_font_sizes/font_size = 25
text = "Main Menu"

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -11

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer"]
z_index = -50
z_as_relative = false
texture_filter = 1
position = Vector2(803.5, 451)
scale = Vector2(0.68967, 0.697531)
texture = ExtResource("2_je8ce")

[connection signal="pressed" from="MarginContainer/VBoxContainer/next level" to="." method="_on_next_level_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/replay level" to="." method="_on_replay_level_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/main menu" to="." method="_on_main_menu_pressed"]
